2009-05-21  Lin Ma  <Lin.Ma@Sun.COM>

	* daemon/main.c (init_wait_for_embedding_idle),
	(init_wait_for_embedding):
	Another way to wait for embedding status icon
	* daemon/notify.c (notify_notification_adjust_nth),
	(notify_notification_adjust_first),
	(nwam_notification_show_message),
	(nwam_notification_show_message_with_action):
	Do not show notifications when the status_icon is hiding.
	* daemon/nwam-menu.c (nwam_menu_section_set_visible),
	(nwam_menu_section_set_sensitive):
	* daemon/nwam-menu.h:
	set sensitive function for menu section.
	* daemon/status_icon.c (daemon_status_changed),
	(nwam_menu_create_wifi_menuitems), (daemon_active_env_changed),
	(on_ncp_notify_many_wireless), (nwam_menu_create_static_menuitems):
	Set sensitive of scan/join wifi menuitems according to the available
	wireless links.

2009-05-21  Lin Ma  <Lin.Ma@Sun.COM>

	* common/libnwamui.h: Fixed wireless secure/insecure icons.
	* daemon/nwam-menu.c (nwam_menu_real_insert): Fixed start_pos isn't zero
	in a middle menu section.
	* daemon/nwam-menuitem.c (nwam_menu_item_set_widget),
	(nwam_menu_item_size_allocate):
	Fixed request resize when a valid widget is added. Fixed allocate widget
	space with considering submenu arrow space.
	* daemon/status_icon.c (nwam_menu_recreate_wifi_menuitems):
	Simply comment out delete all wlan menuitems, because currently I'm  a
	little confused how to invoke wlan scan functions.

2009-05-20  Darren Kenny  <darren.kenny@sun.com>

	* common/nwamui_daemon.h, common/nwamui_daemon.c: 
	  Add nwamui_daemon_find_fav_wifi_net_by_name() to allow for re-use of
	  a favourite network. Update scans and other areas where a WifiNet is
	  created to first check for the favourite before creating a new
	  object.

2009-05-20  Darren Kenny  <darren.kenny@sun.com>

	* capplet/Makefile.am:
	  Don't install .glade file any more.
	* common/nwamui_daemon.h, common/nwamui_daemon.c: 
	  Dispatch Wifi Events from cached data when daemon is made active,